trying to get it to push to the sql database...

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,14 @@
 <body>
     <p id="results"> TEST </p>
     <button id="click">CLICK</button>
+
+<br><br><br><br>
+
+<form>
+First name: <input type="text" id="FirstName"><br>
+<input id="submit" type="submit" value="Submit">
+</form>
+    
     
 </body>
 
