display all results

--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,20 @@
 
 </head>
 <body>
-    <p id="results"> TEST </p>
-    <button id="click">CLICK</button>
-
-<br><br><br><br>
 
 <form>
+
+  <button id="clear">CLEAR THE ENTIRE TABLE</button>
+  <br><br><br><br>
 First name: <input type="text" id="FirstName"><br>
 <input id="submit" type="submit" value="Submit">
 </form>
-    
-    
+<br><br><br><br>
+  <button id="click-all-results">CLICK FOR ALL RESULTS</button>
+ <p id="all-results">sdfsd </p>
+  
+
+
 </body>
 
 </html>
