trying to get the server and app.js to talk

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+   
+ 
+</div>
     <form>
         <br>
         <br>
@@ -27,6 +30,7 @@
     <br>
     <br>
     <button id="click-all-results">CLICK FOR ALL RESULTS</button>
+    <h3>Total Number of Users: <span id="totalUsers"></span></h3>
     <table id="all-results">
     </table>
 </body>
