able to post to database, able to delete, created unique ID key

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,12 @@
  
 </div>
     <form>
-        <br>
-        <br>
-        <br>
-        <br> First name:
-        <input type="text" id="FirstName">
-        <br>
-        <input id="submit" type="submit" value="Submit">
+         First Name: <input type="text" id="firstName"><br>
+         Last Name: <input type="text" id="lastName"><br>
+         E-mail: <input type="text" id="email"><br>
+         Gender: <input type="text" id="gender"><br>
+         <button id="submit">Submit</button>
+<!--         <input id="submit" type="submit" value="Submit"> -->
     </form>
     <br>
     <br>
