small changes to database

--- a/public/index.html
+++ b/public/index.html
@@ -105,9 +105,9 @@
 
     <div id="control_panel">
         <button id="click-all-results">All Users</button>
-        <button id="createPDF">Create PDF</button>
-        <button id="e-mail">Generate E-mail</button>
-        <button id="currentEmployees">Only Current Employees</button>
+<!--         <button id="createPDF">Create PDF</button>
+        <button id="e-mail">Generate E-mail</button> -->
+        <button id="currentEmployees">Current Employees</button>
         <button onclick="window.location.href='charts.html'">Chart Page</button>
     </div>
 
