--- a/public/charts.html
+++ b/public/charts.html
@@ -11,6 +11,14 @@
     <script type="text/javascript" src="charts.js"></script>
 </head>
 <body>
+	<h1>Organizational Chart </h1>
+	<button id="overall">Overall</button>
+	<button id="AC">Analytical Chemistry</button>
+	<button id="ADMIN">Adminstrative</button>
+	<button id="COR">Core</button>
+	<button id="MOL">Molecular</button>
+	<div id="chartPanel">
 	 <div id="chart_div"></div>
+	</div>
 </body>
 </html>
